--- a/test-access.html
+++ b/test-access.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Acceso a servidor web remoto</h1>
 
-    <form action="index.php" method="GET">
+    <form action="http://jrmm-itp-sd-01.epizy.com/index.php" method="GET">
         <p>A: <input type="text" name="valorA" /></p>
         <p>B: <input type="text" name="valorB" /></p>
         <p><input type="submit" value="Enviar"/></p>
